# uv-django-react

./: .gitignore  CLAUDE.md  CONVERSATION_LOG_2025-01-13.md  GPT5-uxDjanoReacTS.md  PROJECT_STRUCTURE.md  README.md  addDataModeltouxdj.md  customMPui2.md
backend/: db.sqlite3  main.py  manage.py  pyproject.toml
backend/api/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/api/management/commands/: populate_sample_data.py
backend/api/migrations/: 0001_initial.py  __init__.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: QueryBuilder.tsx
frontend/src/types/: index.ts
